# ChatBot

./: .gitignore  CHAT_SETUP.md  README.md  URS_CUSTOMER_PAGES - URS_CUSTOMER_PAGES_SPREADSHEET.csv  Yawlit_Chatbot_Overview.md  booking_orchestrator_bridge.py  chat_api.py  chat_api_dspy_example.py  config.py  conversation_manager.py  conversation_script_manager.py  data_extractor.py  dspy_config.py  main.py  models.py  modules.py  optional_fields_extractor.py  pyproject.toml  pywa_integration.py  requirements.txt  response_composer.py  retroactive_validator.py  sentiment_analyzer.py  service_request_dumper.py  signatures.py  start_chat.sh  template_strings.py  test_chat_api.py
booking/: booking_flow_integration.py  scratchpad.py
datadump/: SR-184239E6.json  SR-26B694DB.json  SR-2C2796A6.json  SR-3001DBF5.json  SR-48946AB9.json  SR-4D6BF952.json  SR-55B52C82.json  SR-58F8667D.json  SR-5BAE522F.json  SR-7012AC27.json  SR-9740C3D0.json  SR-9B5A19D0.json  SR-BA24A6DB.json  SR-BDA7972A.json  SR-C7EC0866.json  SR-CB835DFF.json  SR-D0FE2C90.json  SR-E03282FF.json  SR-E7156F81.json  SR-EEEF9DB1.json  SR-F4CDD005.json
docs/: CONFIRMATION_MODE_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  PROACTIVE_CHATBOT_PERSONALITY_PLAN.md
frontend/: package-lock.json  package.json
orchestrator/: extraction_coordinator.py  message_processor.py  scratchpad_coordinator.py  state_coordinator.py
reports/: SYSTEM_ARCHITECTURE.md  URS_PYTHON_MODULES.csv
tests/: conversation_simulator_v2.py  conversation_simulator_v3.py  test_api.py  test_intent_classifier.py  test_llm_connection_fixed.py  (+7 more)
(+3 files in other folders)
